now showing design sizing info panel
